# mcp-alignmentforum

./: .dockerignore  .gitignore  Dockerfile  Procfile  RAILWAY_CONFIG_FIX.md  RAILWAY_DEPLOYMENT.md  RATE_LIMIT_INFO.md  README.md  READY_FOR_TESTING.md  STATUS.md  TESTING.md  proxies.txt  pyproject.toml  railway.json  test-mcp.sh  test_graphql_queries.py
.github/workflows/: update-posts.yml
data/: .gitkeep  alignment-forum-posts.csv
scripts/: RUN_THIS_FROM_YOUR_COMPUTER.py  fetch_from_lesswrong.py  fetch_real_data.py  fetch_slow_sequential.py  fetch_with_proxies.py  migrate_to_neon.py  sync_posts.py  test_csv_data.py  test_fetch.py  test_mcp_logic.py  test_mcp_server.py  test_mcp_tools.py  test_working_query.py  update_posts.py
src/mcp_alignmentforum/: __init__.py  __main__.py  server.py  server_local.py  server_remote.py
test_outputs/: TEST_SUMMARY.md  data_flow_explanation.json  field_transformation_comparison.json  graphql_parsed_output.json  graphql_raw_response.json  graphql_slug_test.json
